Pranjal | Rename beforeCoordinatesTest -> setUp